Leker runt med lösenordshasning

--- a/MeasureMyPike/MeasureMyPike.csproj
+++ b/MeasureMyPike/MeasureMyPike.csproj
@@ -101,13 +101,16 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Model\Security.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\Statistics.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\UserConnections.cs">
+    <Compile Include="Model\User.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="Model\Users.cs">
+    <Compile Include="Model\UserConnections.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\WeatherData.cs">
