Löst ett par trasiga saker som var incheckade

--- a/ApplicationTest/ApplicationTest.csproj
+++ b/ApplicationTest/ApplicationTest.csproj
@@ -79,6 +79,9 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Mockdata\Fisk.jpg" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
