Done the Brand and Lure changes, again =) Also tests in lure tests. One thing left there, the Brands get created twice. Not solved yet.

--- a/ApplicationTest/ApplicationTest.csproj
+++ b/ApplicationTest/ApplicationTest.csproj
@@ -64,6 +64,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CatchTests.cs" />
+    <Compile Include="LureTests.cs" />
     <Compile Include="UserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
