--- a/MeasureMyPike.Tests/MeasureMyPike.Tests.csproj
+++ b/MeasureMyPike.Tests/MeasureMyPike.Tests.csproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="MockData\Fisk.jpg" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
