--- a/MeasureMyPike/MeasureMyPike.csproj
+++ b/MeasureMyPike/MeasureMyPike.csproj
@@ -302,6 +302,7 @@
     <Content Include="Models\MeasureMyPikeModel.edmx.diagram">
       <DependentUpon>MeasureMyPikeModel.edmx</DependentUpon>
     </Content>
+    <Content Include="App.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
