--- a/MeasureMyPike/MeasureMyPike.csproj
+++ b/MeasureMyPike/MeasureMyPike.csproj
@@ -254,9 +254,11 @@
       <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repo\BrandRepository.cs" />
     <Compile Include="Service\BrandService.cs" />
     <Compile Include="Service\CatchService.cs" />
-    <Compile Include="Service\DatabaseConnection.cs" />
+    <Compile Include="Repo\LureRepository.cs" />
+    <Compile Include="Repo\DatabaseConnection.cs" />
     <Compile Include="Service\LureService.cs" />
     <Compile Include="Service\MediaService.cs" />
     <Compile Include="Service\SecurityService.cs" />
