--- a/MeasureMyPike/App.config
+++ b/MeasureMyPike/App.config
@@ -11,7 +11,7 @@
 
   <connectionStrings>
     <!-- <add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;attachdbfilename=|DataDirectory|\MeasureMyPike.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />  -->
-    <add name="ModelContainer" connectionString="metadata=res://*/Models.Entity Framework.MeasureMyPikeModel.csdl|res://*/Models.Entity Framework.MeasureMyPikeModel.ssdl|res://*/Models.Entity Framework.MeasureMyPikeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> 
+    <add name="ModelContainer" connectionString="metadata=res://*/Models.Entity Framework.MeasureMyPikeModel.csdl|res://*/Models.Entity Framework.MeasureMyPikeModel.ssdl|res://*/Models.Entity Framework.MeasureMyPikeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /> 
   </connectionStrings>
  
   <entityFramework>
