--- a/MeasureMyPike/MeasureMyPike.csproj
+++ b/MeasureMyPike/MeasureMyPike.csproj
@@ -261,6 +261,7 @@
     <Compile Include="Service\CatchService.cs" />
     <Compile Include="Repo\LureRepository.cs" />
     <Compile Include="Repo\CatchRepository.cs" />
+    <Compile Include="Service\ConversionService.cs" />
     <Compile Include="Service\LocationService.cs" />
     <Compile Include="Service\LureService.cs" />
     <Compile Include="Service\MediaService.cs" />
