--- a/MeasureMyPike.Tests/MeasureMyPike.Tests.csproj
+++ b/MeasureMyPike.Tests/MeasureMyPike.Tests.csproj
@@ -118,9 +118,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MeasureMyPike\MeasureMyPike.csproj">
+    <ProjectReference Include="..\MeasureMyPike\MeasureMyPike.Application.csproj">
       <Project>{9B400F01-54CE-4910-8213-FCA4BBCEB6C0}</Project>
-      <Name>MeasureMyPike</Name>
+      <Name>MeasureMyPike.Application</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
