Lagt till angular-saker

--- a/MeasureMyPike.Web/Web.config
+++ b/MeasureMyPike.Web/Web.config
@@ -74,5 +74,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <connectionStrings><add name="ModelContainer" connectionString="metadata=&quot;res://*/Models.Entity Framework.MeasureMyPikeModel.csdl|res://*/Models.Entity Framework.MeasureMyPikeModel.ssdl|res://*/Models.Entity Framework.MeasureMyPikeModel.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="ModelContainer" connectionString="metadata=&quot;res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl&quot;;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
