--- a/MeasureMyPike.Web/MeasureMyPike.Web.csproj
+++ b/MeasureMyPike.Web/MeasureMyPike.Web.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.Default.props')" />
   <Import Project="..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props" Condition="Exists('..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\build\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.props')" />
   <Import Project="..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props" Condition="Exists('..\packages\Microsoft.Net.Compilers.1.3.2\build\Microsoft.Net.Compilers.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
@@ -25,6 +26,8 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <TypeScriptToolsVersion>2.0</TypeScriptToolsVersion>
+    <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -193,6 +196,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App\MeasureMyPike\.gitignore" />
+    <Content Include="App\MeasureMyPike\karma.conf.js" />
+    <Content Include="App\MeasureMyPike\protractor.conf.js" />
+    <Content Include="App\MeasureMyPike\src\app\app.component.css" />
+    <Content Include="App\MeasureMyPike\src\app\app.component.html" />
+    <Content Include="App\MeasureMyPike\src\app\view\fish-view\fish-view.component.css" />
+    <Content Include="App\MeasureMyPike\src\app\view\fish-view\fish-view.component.html" />
+    <Content Include="App\MeasureMyPike\src\favicon.ico" />
+    <Content Include="App\MeasureMyPike\src\index.html" />
+    <Content Include="App\MeasureMyPike\src\styles.css" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -224,6 +237,18 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="App.config" />
+    <Content Include="App\MeasureMyPike\.angular-cli.json" />
+    <Content Include="App\MeasureMyPike\.editorconfig" />
+    <Content Include="App\MeasureMyPike\e2e\tsconfig.e2e.json" />
+    <Content Include="App\MeasureMyPike\package.json" />
+    <Content Include="App\MeasureMyPike\README.md" />
+    <Content Include="App\MeasureMyPike\src\assets\.gitkeep" />
+    <Content Include="App\MeasureMyPike\src\tsconfig.app.json" />
+    <Content Include="App\MeasureMyPike\src\tsconfig.spec.json" />
+    <Content Include="App\MeasureMyPike\tsconfig.json" />
+    <Content Include="App\MeasureMyPike\tslint.json" />
+    <Content Include="App\MeasureMyPike\src\main.scss" />
+    <Content Include="App\MeasureMyPike\src\app\app.component.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -264,6 +289,7 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
@@ -276,11 +302,30 @@
       <Name>MeasureMyPike.Domain</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <TypeScriptCompile Include="App\MeasureMyPike\e2e\app.e2e-spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\e2e\app.po.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\app.component.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\app.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\app.module.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\service\fish.service.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\service\fish.service.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\fish-view\fish-view.component.spec.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\app\view\fish-view\fish-view.component.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\environments\environment.prod.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\environments\environment.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\main.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\polyfills.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\test.ts" />
+    <TypeScriptCompile Include="App\MeasureMyPike\src\typings.d.ts" />
+    <None Include="App\MeasureMyPike\proxy.conf.json" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets')" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
   <Target Name="MvcBuildViews" AfterTargets="AfterBuild" Condition="'$(MvcBuildViews)'=='true'">
