Tagit bort gamla filer

--- a/MeasureMyPike.Application/MeasureMyPike.Application.csproj
+++ b/MeasureMyPike.Application/MeasureMyPike.Application.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Service\BrandService.cs" />
     <Compile Include="Service\CatchService.cs" />
     <Compile Include="Service\ConversionService.cs" />
+    <Compile Include="Service\FishService.cs" />
     <Compile Include="Service\LocationService.cs" />
     <Compile Include="Service\LureService.cs" />
     <Compile Include="Service\MediaService.cs" />
