--- a/MeasureMyPike.Domain/MeasureMyPike.Domain.csproj
+++ b/MeasureMyPike.Domain/MeasureMyPike.Domain.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BrandRepository.cs" />
     <Compile Include="Repositories\CatchRepository.cs" />
+    <Compile Include="Repositories\FishRepository.cs" />
     <Compile Include="Repositories\LocationRepository.cs" />
     <Compile Include="Repositories\LureRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
